--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "reveal.js"]
 	path = reveal.js
 	url = https://github.com/hakimel/reveal.js
+[submodule "gitgraph.js"]
+	path = gitgraph.js
+	url = https://github.com/nicoespeon/gitgraph.js
